# AutoSign

./: .gitignore  README.md  app.py
CLI/: README.md  pyproject.toml
CLI/src/autosign_cli/: __init__.py  cli.py
CLI/src/autosign_cli/config/: manager.py
CLI/src/autosign_cli/core/: __init__.py  iclass_client.py  models.py
CLI/src/autosign_cli/runtime/: __init__.py  autostart.py  logging.py  scheduler.py
CLI/tests/: test_cli_integration.py  test_config_manager.py  test_logging.py  test_models.py  test_scheduler.py
Web/: app.py  requirements.txt
Web/autosign/: __init__.py  auto_sign.py  models.py
Web/scripts/: batch_scan_attendance.py  show_today_attendance.py
Web/static/: app.js
Web/templates/: login.html
autosign/: auto_sign.py  iclass_client.py
static/: app.js  styles.css
templates/: dashboard.html
